<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/settings_surface"
    android:layout_marginBottom="16dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="left|center_vertical"
        android:labelFor="@id/hu_name"
        android:textColor="@color/settings_text_primary"
        android:text="@string/car_settings_hu_name"/>

    <EditText
        android:id="@+id/hu_name"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="left|center_vertical"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:textColor="@color/settings_text_primary"
        android:inputType="text"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="left|center_vertical"
        android:labelFor="@id/car_model"
        android:textColor="@color/settings_text_primary"
        android:text="@string/car_settings_model"/>

    <EditText
        android:id="@+id/car_model"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="left|center_vertical"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:textColor="@color/settings_text_primary"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="left|center_vertical"
        android:labelFor="@id/car_year"
        android:textColor="@color/settings_text_primary"
        android:text="@string/car_settings_year"/>

    <EditText
        android:id="@+id/car_year"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:inputType="number"
        android:gravity="left|center_vertical"
        android:textColor="@color/settings_text_primary"
        android:imeOptions="actionDone" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="left|center_vertical"
        android:labelFor="@id/hu_make"
        android:textColor="@color/settings_text_primary"
        android:text="@string/car_settings_hu_make"/>

    <EditText
        android:id="@+id/hu_make"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="left|center_vertical"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:textColor="@color/settings_text_primary"
        android:inputType="text" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="left|center_vertical"
        android:labelFor="@id/hu_model"
        android:textColor="@color/settings_text_primary"
        android:text="@string/car_settings_hu_model"/>

    <EditText
        android:id="@+id/hu_model"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="left|center_vertical"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:textColor="@color/settings_text_primary"
        android:inputType="text" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="left|center_vertical"
        android:labelFor="@id/sw_build"
        android:textColor="@color/settings_text_primary"
        android:text="@string/car_settings_sw_build"/>

    <EditText
        android:id="@+id/sw_build"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="left|center_vertical"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:textColor="@color/settings_text_primary"
        android:inputType="text" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="left|center_vertical"
        android:labelFor="@id/sw_version"
        android:textColor="@color/settings_text_primary"
        android:text="@string/car_settings_sw_version"/>

    <EditText
        android:id="@+id/sw_version"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="left|center_vertical"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:textColor="@color/settings_text_primary"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/play_media_during_vr"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="left"
        android:layout_marginTop="6dp"
        android:textColor="@color/settings_text_primary"
        android:text="@string/car_settings_play_media_during_vr" />

    <CheckBox
        android:id="@+id/hide_clock"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="left"
        android:layout_marginTop="6dp"
        android:textColor="@color/settings_text_primary"
        android:text="@string/car_settings_hide_clock" />

    <CheckBox
        android:id="@+id/left_drive"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="left"
        android:layout_marginTop="6dp"
        android:textColor="@color/settings_text_primary"
        android:text="@string/car_settings_left_drive" />

<!--
    <CheckBox
        android:id="@+id/aa_wifi"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="left"
        android:layout_marginTop="6dp"
        android:text="@string/car_settings_aa_wifi" />
-->
</LinearLayout>
