<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/settings_surface"
    android:layout_marginBottom="16dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="left|center_vertical"
        android:textColor="@color/settings_text_primary"
        android:labelFor="@id/video_resolution"
        android:text="@string/video_settings_resolution"/>

    <Spinner
        android:id="@+id/video_resolution"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:textColor="@color/settings_text_primary"
        android:gravity="left|center_vertical"
        android:textAlignment="viewStart"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="left|center_vertical"
        android:textColor="@color/settings_text_primary"
        android:labelFor="@id/video_fps"
        android:text="@string/video_settings_fps"/>

    <Spinner
        android:id="@+id/video_fps"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:textColor="@color/settings_text_primary"
        android:gravity="left|center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="left|center_vertical"
        android:labelFor="@id/video_dpi"
        android:textColor="@color/settings_text_primary"
        android:text="@string/video_settings_dpi"/>

    <EditText
        android:id="@+id/video_dpi"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:inputType="number"
        android:gravity="left|center_vertical"
        android:textColor="@color/settings_text_primary"
        android:imeOptions="actionDone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="left|center_vertical"
        android:labelFor="@id/video_margin"
        android:textColor="@color/settings_text_primary"
        android:text="@string/video_settings_margin"/>

    <EditText
        android:id="@+id/video_margin"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="left|center_vertical"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:textColor="@color/settings_text_primary"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="left|center_vertical"
        android:labelFor="@id/video_night_mode"
        android:textColor="@color/settings_text_primary"
        android:text="@string/video_settings_nightmode"/>

    <Spinner
        android:id="@+id/video_night_mode"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="left|center_vertical"
        android:textColor="@color/settings_text_primary"
        android:textAlignment="viewStart"/>

    <CheckBox
        android:id="@+id/showMediaNotification"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="left"
        android:layout_marginTop="6dp"
        android:text="@string/video_show_media_notification"
        android:textColor="@color/settings_text_primary" />

    <CheckBox
        android:id="@+id/showNavigationNotification"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="left"
        android:layout_marginTop="6dp"
        android:text="@string/video_show_navigation_notification"
        android:textColor="@color/settings_text_primary" />

</LinearLayout>
